# lancedb-viewer

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  hello.py  marimo_test.py  pyproject.toml  test.ipynb  test_shit.ipynb  web.csv
backend/src/: embeddings.py  main.py  test_db.py
backend/src/embeddings/: azure_embeddings.py
backend/src/routes/: agent.py  manager.py  router_database.py  setup.py
backend/src/storage/: provider.py
frontend/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend-old/: README.md
frontend-old/project.inlang/: project_id  settings.json
frontend-old/src/routes/demo/paraglide/: +page.svelte
frontend/messages/: dk.json  no.json
frontend/project.inlang/: project_id  settings.json
frontend/src/: app.css
frontend/src/lib/components/: InputDbUrl.svelte  app-sidebar.svelte  nav-main.svelte  nav-projects.svelte  nav-secondary.svelte  nav-user.svelte  sidebar-page.svelte  team-switcher.svelte
frontend/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
frontend/src/lib/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-item.svelte  breadcrumb-link.svelte  breadcrumb-list.svelte  breadcrumb-page.svelte  breadcrumb-separator.svelte
frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-group-heading.svelte  (+7 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/demo/paraglide/: +page.svelte
(+11 files in other folders)
